--- a/Lista3/Window1.xaml
+++ b/Lista3/Window1.xaml
@@ -16,10 +16,12 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBox Grid.Column="1" Text="{Binding name, Mode=TwoWay}"></TextBox>
         <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding platform, Mode=TwoWay}"></TextBox>
-        <Button Content="Ok" Grid.Row="2" Click="Button_Click" />
-        <Button Content="Cancel" Grid.Row="2" Grid.Column="1" Click="Button_Click_1" />
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding price, Mode=TwoWay}"></TextBox>
+        <Button Content="Ok" Grid.Row="4" Click="Button_Click" />
+        <Button Content="Cancel" Grid.Row="4" Grid.Column="1" Click="Button_Click_1" />
     </Grid>
 </Window>
