--- a/Lista3/Window1.xaml
+++ b/Lista3/Window1.xaml
@@ -18,9 +18,9 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Column="1" Text="{Binding name, Mode=TwoWay}"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding platform, Mode=TwoWay}"></TextBox>
-        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding price, Mode=TwoWay}"></TextBox>
+        <TextBox Grid.Column="1" Text="{Binding name, Mode=TwoWay}"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding platform, Mode=TwoWay}"/>
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding price, Mode=TwoWay}"/>
         <Button Content="Ok" Grid.Row="4" Click="Button_Click" />
         <Button Content="Cancel" Grid.Row="4" Grid.Column="1" Click="Button_Click_1" />
     </Grid>
